--- a/public/index.html
+++ b/public/index.html
@@ -6,61 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Mini Chat</title>
+    <title>Denied Access</title>
 </head>
 <body class="container">
-    <h1 class="mt-5">Minichat</h1>
+    <h1 class="mt-5">Denied Access</h1>
     <hr />
-
-    <form>
-        <div class="row">
-            <div class="col-8">
-                <input type="text" id="txtMessage" placeholder="Message" class="form-control">
-            </div>
-            <div class="col-4">
-                <button type="submit" class="btn btn-primary">
-                    Send
-                </button>
-            </div>
-        </div>
-    </form>
-
-    <div class="row">
-        <div class="col mt-2">
-            <ul id="myMessages">
-            </ul>
-        </div>
-    </div>
-
-
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.3/socket.io.js" integrity="sha512-PU5S6BA03fRv1Q5fpwXjg5nlRrgdoguZ74urFInkbABMCENyx5oP3hrDzYMMPh3qdLdknIvrGj3yqZ4JuU7Nag==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
+
     const socket = io('https://react-app-socket-s.herokuapp.com/');
 
-    //DOM Elements references
-    const form = document.querySelector('form');
-    const messages = document.querySelector('#myMessages');
-    const input = document.querySelector('#txtMessage');
-
-    form.addEventListener('submit', ( e ) => {
-        e.preventDefault();
-
-        const newMessage = input.value;
-
-        socket.emit('message-to-server', { text: newMessage })
-    });
-
     socket.on('message-from-server', ( data ) => {
-        console.log(data)
 
-        messages.innerHTML += `<li>${ data.text }</li>`;
-    } ) 
+    } );
 
-    // socket.on('welcome-message', ( data ) => {
-    //     console.log(data)
-    // })
 </script>
 
 </html>
